# audio-latency-tester

./: .buildinfo  .ci.yml  CMakeLists.txt  README.md  audio_capture.py  audio_controller.py  audio_playback.py  genindex.html  index.html  installation.html  objects.inv  overview.html  play_capture.py  references.html  remove_background.py  searchindex.js  usage.html
_sources/: index.md.txt  installation.md.txt  overview.md.txt  references.md.txt
_static/tippy/: index.8620f4b3-95fa-4150-a11a-0ec2916546d5.js  index.dda02a1e-df44-41dc-ab55-6d7a04ace34c.js  installation.a4930458-642f-4d8b-882a-2cdf4ecf8937.js  installation.c61c06bc-49e9-4906-9ba0-117e5f85ebcb.js  overview.6d42aac9-ac2d-4426-8a25-a9c666bc8adc.js  usage.19b62671-eeef-4444-829c-17825a2501ad.js  usage.5097722c-6dfe-4537-a406-ab46a0b90077.js
audio_in_pdm/: CMakeLists.txt  main.c  mic_i2s.pio  usb_descriptors.c
audio_out/: CMakeLists.txt  main.c  usb_descriptors.c
automated_test/: analyze.py
doc/base-system-latency-measurements/: audio-latency-measurements.csv
doc/bt-headset-latency-measurements/: results.csv
doc/meet-latency-measurements/: results.csv
doc/meet-latency-measurments/: results.csv
doc/source/: conf.py  installation.md  overview.md  references.md  usage.md
include/: usb_proto.h
